--- a/demo2/src/main/resources/static/index.html
+++ b/demo2/src/main/resources/static/index.html
@@ -5,22 +5,63 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Demo 2</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<style>
+body{
+	background-color: #7dafff;
+}
+
+h1{
+	text-align: center;
+}
+</style>
+<body>
+<div class="container mt-5">
+	<h1>Personal Project: Jakarta EE (JPA Repository, Jakarta Persistence) Implementation</h1>
+	<div style="display: flex; flex-direction: column; gap: 10px; margin-bottom: 20px;">
+	<label for="name">Enter your name:
+	<input type="text" id="name" name="name" class="form-control" required>
+	</label>
+	<label for="email">Enter your email:
+	<input type="email" id="email" name="email" class="form-control" required>
+	</label>
+	<button id="submit" class="btn btn-primary mt-2">Submit</button>
+	</div>
+	<pre id="data" class="bg-light p-3"></pre>       
+</div>
+</body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-</head>
-<body>
-<div class="container mt-5">
-	<h1>Demo 2: Jakarta Persistence</h1>
-	<p>This page fetches data from the server using Axios and displays it below.</p>
-	<pre id="data" class="bg-light p-3"></pre>       
-</div>
-</body>
     <script>
+		document.getElementById('submit').addEventListener('click', function() {
+        const name = document.getElementById('name').value;
+        const email = document.getElementById('email').value;
+			
+		const formData = {
+			name: name,
+            email: email
+        };
+			
+            if (name && email) {
+                axios.post('/post/user', formData)
+                    .then(response => {
+                        console.log('Data submitted successfully:', response.data);
+                        alert('Data submitted successfully!');
+                    })
+                    .catch(error => {
+                        console.error('Error submitting data:', error);
+                        alert('Error submitting data. Check console for details.');
+                    });
+            } else {
+                alert('Please fill in both fields.');
+            }
+        });
+		
         async function fetchData() {
             try {
-                const response = await axios.get('/api/users');
+                const response = await axios.get('/get/users');
                 document.getElementById('data').innerText = JSON.stringify(response.data, null, 2);
                 console.log('Data fetched successfully:', response.data);
             } catch (error) {
